<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center_horizontal"
    tools:context=".MainActivity"
android:background="@drawable/bd_register">
    <ImageView

            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/college"/>
    <EditText
            android:id="@+id/text_username"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:hint="@string/username"
            android:layout_marginTop="10dp"/>
    <EditText
            android:id="@+id/text_password"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:hint="@string/password"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPassword"/>

    <Button
            android:id="@+id/login_button"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="Login"
            android:layout_marginTop="20dp"
            android:background="#FFC0Cb"
            android:textStyle="bold"/>
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:orientation="horizontal">
                    <TextView
                            android:id="@+id/textview_notregistration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/not_registered"
                            android:layout_marginTop="20dp"
                            android:textStyle="bold"
                            android:textColor="#000000"/>
        <TextView
                android:id="@+id/textview_registration"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/registered"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="#0000FF"
                android:paddingLeft="15dp"/>
    </LinearLayout>



</LinearLayout>