<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center_horizontal"
              tools:context=".RegisterForActivity"
              android:background="#FDF5E6">
    <ImageView

            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/icon"/>
    <EditText
            android:id="@+id/name"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:hint="Enter your name"
            android:layout_marginTop="10dp"/>
    <EditText
            android:id="@+id/branch"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:hint="@string/branch"
            android:layout_marginTop="20dp"/>
    <EditText
            android:id="@+id/sports"
            android:layout_width="240dp"
            android:layout_height="40dp"
            android:hint="@string/name_sports"
            android:layout_marginTop="20dp"/>

    <Button
            android:id="@+id/register_button"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:text="@string/registered"
            android:layout_marginTop="20dp"
            android:background="#FFC0Cb"/>



</LinearLayout>