<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Sports.VollyballActivity">
    <ImageView android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/vollyball_bg"
               android:id="@+id/vollyball_image"/>
    <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/vollyball_image">

        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:gravity="center"
        >
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:gravity="center"
                      android:text="@string/VOLLY_BALL"
                      android:textStyle="bold"
                      android:textSize="30dp"
                      android:textColor="#000000"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vollyball"/>
            <Button
                    android:id="@+id/register_for"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#7FFF00"
                    android:text="@string/Register_event"
                    android:layout_margin="10dp"
                    android:textColor="#800000"
                    android:textStyle="bold"
                    android:textSize="20dp"/>
        </LinearLayout>

    </ScrollView>


</RelativeLayout>