<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SportsActivity"
android:background="@drawable/bg_color_screen"
android:gravity="center">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="SPARDHA SPORTS EVENTS"
                  android:textStyle="bold"
                  android:textSize="25dp"
                  android:gravity="center"
                  android:textColor="#0000FF"
                  android:id="@+id/spardha"
        android:layout_margin="20dp"/>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    android:layout_below="@+id/spardha">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
    <ImageButton
            android:id="@+id/athleat"
            android:layout_width="220dp"
                 android:layout_height="100dp"
    android:layout_weight="1"
    android:src="@drawable/athelets"
    android:layout_margin="20dp"
    android:layout_marginLeft="50dp"/>
    <TextView
            android:id="@+id/text_athleat"
            android:layout_width="wrap_content"
              android:layout_height="wrap_content"
    android:text="@string/athletics_text"
    android:layout_toRightOf="@+id/athleat"
    android:layout_below="@+id/spardha"
    android:layout_marginLeft="40dp"
    android:textColor="#000000"
    android:textStyle="italic"
    android:textSize="30dp"
    />
    <ImageButton
            android:id="@+id/cricket"
            android:layout_width="220dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:src="@drawable/cricket"
            android:layout_margin="20dp"
    android:layout_marginLeft="40dp"/>
    <TextView
            android:id="@+id/text_cricket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CRICKET"
            android:layout_marginLeft="40dp"
            android:textColor="#000000"
            android:textStyle="italic"
            android:textSize="30dp"/>
    <ImageButton
            android:id="@+id/sport_football"
            android:layout_width="220dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:src="@drawable/football"
            android:layout_margin="20dp"
    android:layout_marginLeft="40dp"/>
    <TextView
            android:id="@+id/text_football"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FOOTBALL"
            android:layout_marginLeft="40dp"
            android:textColor="#000000"
            android:textStyle="italic"
            android:textSize="30dp"/>
    <ImageButton
            android:id="@+id/vollyball"
            android:layout_width="220dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:src="@drawable/volleyball"
            android:layout_margin="20dp"
            android:layout_marginLeft="40dp"/>
    <TextView
            android:id="@+id/text_vollyball"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/VOLLY_BALL"
            android:layout_marginLeft="40dp"
            android:textColor="#000000"
            android:textStyle="italic"
            android:textSize="30dp"/>
            <ImageButton
                    android:id="@+id/chess"
                    android:layout_width="220dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:src="@drawable/chessset"
                    android:layout_margin="20dp"
                    android:layout_marginLeft="40dp"/>
            <TextView
                    android:id="@+id/text_chess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CHESS"
                    android:layout_marginLeft="40dp"
                    android:textColor="#000000"
                    android:textStyle="italic"
                    android:textSize="30dp"/>
            <ImageButton
                    android:id="@+id/tabletenish"
                    android:layout_width="220dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:src="@drawable/table"
                    android:layout_margin="20dp"
                    android:layout_marginLeft="40dp"/>
            <TextView
                    android:id="@+id/text_tabletenish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TABLE TENNISH"

                    android:layout_marginLeft="40dp"
                    android:textColor="#000000"
                    android:textStyle="italic"
                    android:textSize="30dp"/>
            <ImageButton
                    android:id="@+id/carrom"
                    android:layout_width="220dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:src="@drawable/carrom"
                    android:layout_margin="20dp"
                    android:layout_marginLeft="40dp"/>
            <TextView
                    android:id="@+id/text_carrom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CARROM"
                    android:layout_marginLeft="40dp"
                    android:textColor="#000000"
                    android:textStyle="italic"
                    android:textSize="30dp"/>
            <ImageButton
                    android:id="@+id/badminton"
                    android:layout_width="220dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:src="@drawable/badminton"
                    android:layout_margin="20dp"
                    android:layout_marginLeft="40dp"/>
            <TextView
                    android:id="@+id/text_badminton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_BADMINTON"
                    android:layout_marginLeft="40dp"
                    android:textColor="#000000"
                    android:textStyle="italic"
                    android:textSize="30dp"/>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>