<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Sports.CricketActivity">
    <ImageView android:layout_width="wrap_content"
               android:layout_height="250dp"
               android:src="@drawable/cricket_image_big"
               android:id="@+id/cricket_image"/>
    <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/cricket_image">

        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:gravity="center"
        >
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:gravity="center"
                      android:text="@string/Cricket_MAtches"
                      android:textStyle="bold"
                      android:textSize="30dp"
                      android:textColor="#000000"/>
            <ImageView
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:src="@drawable/cricket_timetable"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:gravity="center"
                      android:text="@string/Gallery"
                      android:textStyle="bold"
                      android:textSize="30dp"
                      android:textColor="#000000"/>
            <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                <ImageView android:layout_width="400dp"
                           android:layout_height="wrap_content"
                android:src="@drawable/cpone"
                android:id="@+id/cp1"/>
                <ImageView android:layout_width="400dp"
                           android:layout_height="wrap_content"
                           android:src="@drawable/cptwo"
                android:id="@+id/cp2"
                android:layout_below="@id/cp1"/>
                <ImageView android:layout_width="400dp"
                           android:layout_height="wrap_content"
                           android:src="@drawable/cpthree"
                           android:id="@+id/cp3"
                           android:layout_below="@id/cp2"/>
                <Button
                        android:id="@+id/register_for"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="#7FFF00"
                        android:text="@string/Register_event"
                        android:layout_below="@+id/cp3"
                        android:layout_margin="10dp"
                        android:textColor="#800000"
                        android:textStyle="bold"
                        android:textSize="20dp"/>


            </RelativeLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>